--- a/package.json
+++ b/package.json
@@ -3,18 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8080",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@next/font": "13.0.7",
+    "@redux-devtools/extension": "^3.2.4",
+    "axios": "^1.2.2",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
+    "moment": "^2.29.4",
     "next": "13.0.7",
+    "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
+    "redux-saga": "^1.2.2",
     "sass": "^1.57.1"
   }
 }
